2010-01-15  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_ipt.cpp (PolicyCompiler_ipt::compile): Using rule
	processor Compiler::checkForObjectsWithErrors to find objects with
	errors and generate proper calls to abort(). This exposes errors
	that happened when Preprocessor failed to resolve compile-time
	AddressTable and DNSName objects. If compiler runs in test mode,
	preprocessor did not abort but used dummy substitution addresses
	and continued. Call to checkForObjectsWithErrors generates proper
	error messages tied to rules. Using this rule processor in all
	compilers. Fixes #1087

	* PolicyCompiler_ipt.cpp (processMultiAddressObjectsInRE::processNext):
	fixes #1086: incorrect processing of run time address tables.
	SourceForge bug 2932680. Rules with two run-time AddressTable
	objects in the same rule element (source or destination) were
	converted to the shell script that read addresses from the address
	table files, plus wrong iptables command that matched any to any.
	This change removes this extra command.

	* OSConfigurator_linux24.cpp (OSConfigurator_linux24::printShellFunctions):
	fixes #1084 "if all user turns off all interface management and
	configuration checkboxes, the check_tools shell function is not
	added to the script but still called". Shell function
	"check_tools" verifies that system tools iptables script needs to
	operate properly are installed on the firewall. These are: ip,
	modprobe and optionally vconfig, brctl, ifenslave. The bug made
	compiler for iptables to add the call to the function but function
	definition was missing if user unchecked all "configure
	interfaces" checkboxes in the Script tab of firewall object
	settings dialog.

	* CompilerDriver_ipt_run.cpp (CompilerDriver_ipt::run): Refs #869
	making sure non-english comments appear correctly in the single
	rule compile output and generated configuration files and scripts.

2010-01-14  vadim  <vadim@vk.crocodile.org>
